--- a/www.megamachinery.com/about-us/index.html
+++ b/www.megamachinery.com/about-us/index.html
@@ -4554,7 +4554,8 @@
                                                         <div class="vc_column-inner">
                                                             <div class="wpb_wrapper">
                                                                 <h1 style="font-size: 50px;color: #000000;text-align: left;font-family:Open Sans;font-weight:800;font-style:normal"
-                                                                    class="vc_custom_heading vc_do_custom_heading">MEGA
+                                                                    class="vc_custom_heading vc_do_custom_heading">
+                                                                    WASHUN
                                                                     MACHINERY</h1>
                                                                 <div class="wpb_text_column wpb_content_element">
                                                                     <div class="wpb_wrapper">
@@ -4613,7 +4614,7 @@
                                             <div class="wpb_wrapper">
                                                 <div class="timeline">
                                                     <div class="timeline-item">
-                                                        <div class="timeline-year">1969</div>
+                                                        <div class="timeline-year">2010</div>
                                                         <div class="timeline-content">
                                                             <h3 class="timeline-title">Humble beginnings</h3>
                                                             <div class="timeline-text">The company has high-precision
@@ -4624,7 +4625,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="timeline-item">
-                                                        <div class="timeline-year">1995</div>
+                                                        <div class="timeline-year">2015</div>
                                                         <div class="timeline-content">
                                                             <h3 class="timeline-title">New headquarters</h3>
                                                             <div class="timeline-text">gathers professional and
