slider is fixed

--- a/www.megamachinery.com/index.html
+++ b/www.megamachinery.com/index.html
@@ -4533,7 +4533,7 @@
 										<li class="menu-item menu-item-type-post_type menu-item-object-page"><a
 												href="gallery/our-clients/index.html">Our Clients</a></li>
 										<li class="menu-item menu-item-type-post_type menu-item-object-page"><a
-												href="gallery/mega-machinery-daily/index.html">Ywashun machinery
+												href="gallery/mega-machinery-daily/index.html">Washun machinery
 												Daily</a>
 										</li>
 									</ul>
@@ -5068,7 +5068,7 @@
 																	data-rsp_ch="on" data-xy="x:c;xo:-4px;y:188px;"
 																	data-text="w:normal;s:80;l:90;ls:-4;fw:800;"
 																	data-dim="minh:0px;" data-frame_999="o:0;st:w;"
-																	style="z-index:5;font-family:Poppins;">MEGA
+																	style="z-index:5;font-family:Poppins;">WASHUN
 																	machinery
 																</rs-layer><!--
 
@@ -5076,7 +5076,7 @@
 																	data-rsp_ch="on" data-xy="x:c;xo:-3px;y:291px;"
 																	data-text="w:normal;s:18;"
 																	data-frame_999="o:0;st:w;"
-																	style="z-index:6;font-family:Roboto;">MEGA-The
+																	style="z-index:6;font-family:Roboto;">WASHUN-The
 																	leading creators of blow molding machine and
 																	injection mould in China.
 																</rs-layer><!--
