WASHUN TEXT IS ADDED  INSTEAD OF SPACE MEGA SPACE by using find replace

--- a/www.megamachinery.com/portfolio/electric-stretch-blow-moulding-machines/index.html
+++ b/www.megamachinery.com/portfolio/electric-stretch-blow-moulding-machines/index.html
@@ -4640,7 +4640,7 @@
                                                                             access to and storage of all the parameters
                                                                             for the control of the machine and heating
                                                                             and blowing processes. Self diagnostics and
-                                                                            remote control with Mega customer support
+                                                                            remote control withWASHUNcustomer support
                                                                             are also provided in the latest version.</p>
                                                                         <p><strong>* Preform loading
                                                                                 system</strong><br />
@@ -4759,7 +4759,7 @@
                                                                             from two factors, blowing the bottles and
                                                                             reheating the performs . In order to reduce
                                                                             the production cost for the bottler
-                                                                            producer, Mega has introduced an Air
+                                                                            producer,WASHUNhas introduced an Air
                                                                             recovery system. This system recovers up to
                                                                             30% of exhausted High pressure air.</p>
                                                                         <p><strong>* Air cooling system</strong><br />
@@ -4826,7 +4826,7 @@
                                                             1. Top Brand electronic components.<br />
                                                             2. Large touch screen that saves up to 30 sets of
                                                             data.<br />
-                                                            3. Remote control unit with MEGA customer support service.
+                                                            3. Remote control unit withWASHUNcustomer support service.
                                                         </p>
 
                                                     </div>
