--- a/www.megamachinery.com/portfolio/filling-packaging-equipments/index.html
+++ b/www.megamachinery.com/portfolio/filling-packaging-equipments/index.html
@@ -4563,7 +4563,7 @@
                                                     <div class="wpb_wrapper">
                                                         <p>Along with the increasing requirement of PET bottle in the
                                                             market, the related filling &amp; packing equipments is
-                                                            getting more important. MEGA as one of the professional
+                                                            getting more important.WASHUNas one of the professional
                                                             injection molding and blow molding equipments supplier in
                                                             china, we provide the turn-key packaging production line for
                                                             the customers, we have been working with different
