--- a/www.megamachinery.com/portfolio/mg-s250l-extrusion-blow-moulding-machine/index.html
+++ b/www.megamachinery.com/portfolio/mg-s250l-extrusion-blow-moulding-machine/index.html
@@ -4578,7 +4578,7 @@
                                                             guarantees quick color changing function, and the various of
                                                             points of thickness controller is available for the better
                                                             performance of the machine. In terms of additional equipment
-                                                            and control options, MEGA accommodate virtually every
+                                                            and control options,WASHUNaccommodate virtually every
                                                             customer requirement so that the optimum blow molding system
                                                             is supplied for each project.</p>
 
