--- a/www.megamachinery.com/portfolio/pet-blow-mould/index.html
+++ b/www.megamachinery.com/portfolio/pet-blow-mould/index.html
@@ -4610,11 +4610,11 @@
                                                 <div class="alert alert-info">
                                                     <button type="button" class="close" data-dismiss="alert"
                                                         aria-hidden="true"><i class="fa fa-remove"></i></button>
-                                                    <i class="fa fa-bell-o"></i> MEGA provides both of linear and rotary
+                                                    <i class="fa fa-bell-o"></i>WASHUNprovides both of linear and rotary
                                                     blow moulds for other brand PET blow moulding machines.
                                                 </div>
                                                 <h4 class='heading-left  style-1' style='color: #1e73be'><span>Follows
-                                                        are some PET blow mould designs produced by Mega </span></h4>
+                                                        are some PET blow mould designs produced byWASHUN</span></h4>
                                                 <div class="vc_row wpb_row vc_inner vc_row-fluid">
                                                     <div class="wpb_column vc_column_container vc_col-sm-4">
                                                         <div class="vc_column-inner">
@@ -4833,13 +4833,13 @@
                                                                 <div class="wpb_text_column wpb_content_element">
                                                                     <div class="wpb_wrapper">
                                                                         <p><strong>Bottle design</strong><br />
-                                                                            Mega design department is equipped with
+                                                                            WASHUNdesign department is equipped with
                                                                             advanced 2D &amp; 3D modeling software.
                                                                             Those systems are used to design PET bottle
                                                                             as well as the complex surface generation
                                                                             for today’s plastic industry. Together with
                                                                             many years’ experience and advanced design
-                                                                            tools, Mega can turn your bottle design idea
+                                                                            tools,WASHUNcan turn your bottle design idea
                                                                             into reality and make sure it meets your
                                                                             requirement.</p>
                                                                         <p><strong>Material for mould
@@ -4857,13 +4857,13 @@
                                                                         </p>
                                                                         <p><strong>Mould building
                                                                                 machining</strong><br />
-                                                                            For different bottle shape, Mega adopts
+                                                                            For different bottle shape,WASHUNadopts
                                                                             Lathe, EDM and CNC machining center on mould
                                                                             building correspondingly. Perfect shaping,
                                                                             final volume matching, slight parting-line
                                                                             on the final bottle and proper cooling
                                                                             channels design with leakage proof are main
-                                                                            features of Mega stretch blow mould.</p>
+                                                                            features ofWASHUNstretch blow mould.</p>
                                                                         <p><strong>Coating after
                                                                                 machining</strong><br />
                                                                             After final test on the mould, we will make
