--- a/www.megamachinery.com/portfolio/pet-injection-moulding-machines/index.html
+++ b/www.megamachinery.com/portfolio/pet-injection-moulding-machines/index.html
@@ -4598,7 +4598,7 @@
 															late 80th, According to the experience of the building the
 															preform tools, The PET series Injection molding machine has
 															been designed according to the property of MEGA’s own
-															preform moulds. Mega provides the different options for our
+															preform moulds.WASHUNprovides the different options for our
 															PET machine, such as the additional pressure holding system,
 															the 25:1 PET screw with extended frame base, double pumps
 															system for better plasticizing effect, two stage injection
