--- a/www.megamachinery.com/portfolio/rotary-blow-moulding-machines/index.html
+++ b/www.megamachinery.com/portfolio/rotary-blow-moulding-machines/index.html
@@ -4774,7 +4774,7 @@
                                                                             the bottles is from generating the high
                                                                             pressure compressed air and reheating the
                                                                             preforms, In order to reduce the production
-                                                                            cost for the bottler producer, Mega has
+                                                                            cost for the bottler producer,WASHUNhas
                                                                             introduced Air recovery system. This system
                                                                             recovers up to 30% of final high pressure
                                                                             blowing air.</p>
