--- a/www.megamachinery.com/products/extrusion-blow-molding-machines/index.html
+++ b/www.megamachinery.com/products/extrusion-blow-molding-machines/index.html
@@ -4575,7 +4575,7 @@
                                                             moulded products simple, regardless whether equipped with a
                                                             continuous or accumulator parison head, featuring hydraulic
                                                             or hybrid electric drive and other techniques. Close
-                                                            cooperation between MEGA and its customers adds to the
+                                                            cooperation betweenWASHUNand its customers adds to the
                                                             success.</p>
 
                                                     </div>
