--- a/www.megamachinery.com/products/index.html
+++ b/www.megamachinery.com/products/index.html
@@ -4675,7 +4675,7 @@
                                                                         style="color: #000000;">Along with the
                                                                         increasing requirement of PET bottle in the
                                                                         market, the related filling &amp; packing
-                                                                        equipments is getting more important. MEGA as
+                                                                        equipments is getting more important.WASHUNas
                                                                         one of the professional injection.. <a
                                                                             href="../projects/filling-packaging-equipments/index.html">[More.]</a></span>
                                                                 </h6>
