--- a/www.megamachinery.com/products/injection-molding-machine/index.html
+++ b/www.megamachinery.com/products/injection-molding-machine/index.html
@@ -4577,7 +4577,7 @@
                                                             develop and manufacture a range of hybrid and hydraulic
                                                             injection moulding machines with clamping forces ranging
                                                             from 770 kN to 12,500 kN.</p>
-                                                        <p>At present, MEGA offers three range of the the injection
+                                                        <p>At present,WASHUNoffers three range of the the injection
                                                             molding machines, The PET Master Preform Moulding System is
                                                             specialized machine for the high speed preform moulding
                                                             production line. The MG Series Injection Moulding Machines
