--- a/www.megamachinery.com/products/pet-moulds/cap-and-closure-mould/index.html
+++ b/www.megamachinery.com/products/pet-moulds/cap-and-closure-mould/index.html
@@ -4585,7 +4585,7 @@
                                         <div class="vc_column-inner">
                                             <div class="wpb_wrapper">
                                                 <h5 class='heading-left  divider-sm'><span>The Cap &amp; Closure Mould
-                                                        Produced by MEGA </span></h5>
+                                                        Produced byWASHUN</span></h5>
                                             </div>
                                         </div>
                                     </div>
