--- a/www.megamachinery.com/products/pet-moulds/wide-mouth-preform-moulds/index.html
+++ b/www.megamachinery.com/products/pet-moulds/wide-mouth-preform-moulds/index.html
@@ -4563,7 +4563,7 @@
                                                     <div class="wpb_wrapper">
                                                         <p>Wide mouth preform mould also named Jar preform mould, The
                                                             jar preforms or wide mouth preforms are mainly designed for
-                                                            the candy and the nuts packaging. Mega has been designing
+                                                            the candy and the nuts packaging.WASHUNhas been designing
                                                             and manufactuer for those preform mould for many years, MEGA
                                                             provides both of valve gate system and supper small runner
                                                             nub system for the different wide mouth preform application.
@@ -4580,7 +4580,7 @@
                                         <div class="vc_column-inner">
                                             <div class="wpb_wrapper">
                                                 <h5 class='heading-left  divider-sm'><span>The Wide Mouth Preform Moulds
-                                                        Produced by MEGA </span></h5>
+                                                        Produced byWASHUN</span></h5>
                                             </div>
                                         </div>
                                     </div>
