--- a/www.megamachinery.com/solution/hot-fill-pet-bottles/index.html
+++ b/www.megamachinery.com/solution/hot-fill-pet-bottles/index.html
@@ -4573,7 +4573,7 @@
                                                         <p>Normally PET bottles caused deformation when the temperature
                                                             of the liquid over 65°C due to glass transition.</p>
                                                         <p>Thanks to the design contributions of our GM Cai Yuansen,
-                                                            Mega has developed the revolutionary multiple blowing stage
+                                                            WASHUNhas developed the revolutionary multiple blowing stage
                                                             and air cooling system two methods for hot fill (heat set)
                                                             PET bottles. Both of systems are introduced to reduce the
                                                             level of PET residual stress and increase the rate of PET
