--- a/www.megamachinery.com/solution/index.html
+++ b/www.megamachinery.com/solution/index.html
@@ -4504,7 +4504,7 @@
                                                 <div class="vc_empty_space" style="height: 5px"><span
                                                         class="vc_empty_space_inner"></span></div>
                                                 <h2 style="text-align: left;font-family:Oswald;font-weight:700;font-style:normal"
-                                                    class="vc_custom_heading vc_do_custom_heading">MEGA-offer an
+                                                    class="vc_custom_heading vc_do_custom_heading">WASHUN-offer an
                                                     excellent plastic packing solution.</h2>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
@@ -4513,7 +4513,7 @@
                                                             but also gain advantages in the market. Our goal is to
                                                             establish long-term partnerships and close cooperation with
                                                             customers.</p>
-                                                        <p>The professional technology of the MEGA team combined with
+                                                        <p>The professional technology of theWASHUNteam combined with
                                                             our industry-leading solutions provide customers with a real
                                                             competitive advantage.</p>
 
@@ -4616,7 +4616,7 @@
                                                         <h6 style="text-align: center;"><span
                                                                 style="color: #000000;">The PET bottles with the handles
                                                                 are getting more popular in the beverage and containers
-                                                                for the kitchen. Mega provides different solution for
+                                                                for the kitchen.WASHUNprovides different solution for
                                                                 the PET bottles with the handle;  <a
                                                                     href="pet-bottles-with-the-handle/index.html">[More]</a></span>
                                                         </h6>
