--- a/www.megamachinery.com/solution/multi-layer-barrier-pet-bottle/index.html
+++ b/www.megamachinery.com/solution/multi-layer-barrier-pet-bottle/index.html
@@ -4555,7 +4555,7 @@
                                                             different layers of the preforms, it helps the content
                                                             keeping away from gone bad. But it is difficult to be blown
                                                             by stretching type. Based on the decade’s experience of
-                                                            R&amp;D in two stage stretch blow molding machine, MEGA has
+                                                            R&amp;D in two stage stretch blow molding machine,WASHUNhas
                                                             successful developed a new system for the Multi-layer
                                                             barrier bottles. It is suitable for the different
                                                             multi-layer barrier application.</p>
