--- a/www.megamachinery.com/solution/pet-bottles-with-the-handle/index.html
+++ b/www.megamachinery.com/solution/pet-bottles-with-the-handle/index.html
@@ -4551,7 +4551,7 @@
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
                                                         <p>The PET bottles with the handles are getting more popular in
-                                                            the beverage and containers for the kitchen. Mega provides
+                                                            the beverage and containers for the kitchen.WASHUNprovides
                                                             different solution for the PET bottles with the handle; the
                                                             integral handles PET bottles range is from the 0.1L up to
                                                             20L. The special designed air cooling spot and handle insert
