--- a/www.megamachinery.com/portfolio/economical-blow-moulding-machines/index.html
+++ b/www.megamachinery.com/portfolio/economical-blow-moulding-machines/index.html
@@ -4760,7 +4760,7 @@
                                                                             from two factors, blowing the bottles and
                                                                             reheating the performs . In order to reduce
                                                                             the production cost for the bottler
-                                                                            producer, Mega has introduced an Air
+                                                                            producer,WASHUNhas introduced an Air
                                                                             recovery system. This system recovers up to
                                                                             30% of exhausted High pressure air.</p>
                                                                         <p><strong>* Air cooling system</strong><br />
