number is added

--- a/www.megamachinery.com/about-us/index.html
+++ b/www.megamachinery.com/about-us/index.html
@@ -4834,7 +4834,7 @@
                                                                 <div class="content-wrap"><span class='item-title'
                                                                         style='color:#a3baca;'>PHONE</span>
                                                                     <div class='text font1' style='color:#fff'>
-                                                                        +0086-576-84020122</div>
+                                                                        +0086 15158966554</div>
                                                                 </div>
                                                             </div>
                                                         </div>
