Email is changed

--- a/www.megamachinery.com/about-us/index.html
+++ b/www.megamachinery.com/about-us/index.html
@@ -4822,7 +4822,7 @@
                                                                 <div class="content-wrap"><span class='item-title'
                                                                         style='color:#a3baca;'>EMAIL</span>
                                                                     <div class='text font1' style='color:#fff'>
-                                                                        hymega@gmail.com</div>
+                                                                        washun.m@hotmail.com</div>
                                                                 </div>
                                                             </div>
                                                         </div>
