--- a/www.megamachinery.com/contact-us/index.html
+++ b/www.megamachinery.com/contact-us/index.html
@@ -4560,7 +4560,7 @@
                                                     <tr class='info-table-row'>
                                                         <th class='info-table-icon'><i class='fa fas fa-at'></i></th>
                                                         <td class='info-table-content'><strong><a
-                                                                    href='hymega%40gmail.html'>hymega@gmail.com</a></strong>
+                                                                    href='hymega%40gmail.html'>washun.m@hotmail.com</a></strong>
                                                         </td>
                                                     </tr>
                                                     <tr class='info-table-row'>
