LOcation is udpated not completed

--- a/www.megamachinery.com/about-us/index.html
+++ b/www.megamachinery.com/about-us/index.html
@@ -4801,19 +4801,7 @@
                                             <div class="wpb_wrapper">
                                                 <div class="contact-cards">
                                                     <div class="row">
-                                                        <div class='col-md-4'>
-                                                            <div class="card"
-                                                                style="background-color:#215070; color:#3498db"><span
-                                                                    class='icon'><i class='fas fa-map'
-                                                                        style='color: #fff'></i></span>
-                                                                <div class="content-wrap"><span class='item-title'
-                                                                        style='color:#a3baca;'>LOCATION</span>
-                                                                    <div class='text font1' style='color:#fff'>
-                                                                        Xiayangao,Yanjiang Town,Linhai City, Zhejiang
-                                                                        Province, China</div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
+
                                                         <div class='col-md-4'>
                                                             <div class="card"
                                                                 style="background-color:#215070; color:#3498db"><span
@@ -4834,7 +4822,105 @@
                                                                 <div class="content-wrap"><span class='item-title'
                                                                         style='color:#a3baca;'>PHONE</span>
                                                                     <div class='text font1' style='color:#fff'>
-                                                                        +0086 15158966554</div>
+                                                                        +86 15158966554</div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class='col-md-4'>
+                                                            <div class="card"
+                                                                style="background-color:#215070; color:#3498db"><span
+                                                                    class='icon'><i class='fas fa-map'
+                                                                        style='color: #fff'></i></span>
+                                                                <div class="content-wrap"><span class='item-title'
+                                                                        style='color:#a3baca;'>LOCATION</span>
+                                                                    <div class='text font1' style='color:#fff'>
+                                                                        Yiwu intentional city
+                                                                        Sales office 2 : 10floor , Shuguang Building,
+                                                                        Yiwu City, Zhejiang Province.</div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class='col-md-4'>
+                                                            <div class="card"
+                                                                style="background-color:#215070; color:#3498db"><span
+                                                                    class='icon'><i class='fas fa-map'
+                                                                        style='color: #fff'></i></span>
+                                                                <div class="content-wrap"><span class='item-title'
+                                                                        style='color:#a3baca;'>LOCATION</span>
+                                                                    <div class='text font1' style='color:#fff'>
+                                                                        Zhejiang province:
+                                                                        Address: 88 Yingxia North Road, Yuyao Industrial
+                                                                        Park Zone, Yuyao,zhejiang province, China</div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class='col-md-4'>
+                                                            <div class="card"
+                                                                style="background-color:#215070; color:#3498db"><span
+                                                                    class='icon'><i class='fas fa-map'
+                                                                        style='color: #fff'></i></span>
+                                                                <div class="content-wrap"><span class='item-title'
+                                                                        style='color:#a3baca;'>LOCATION</span>
+                                                                    <div class='text font1' style='color:#fff'>
+                                                                        Shanghai:
+                                                                        Address: No. 188 Xinjinqiao Road, Xuhui
+                                                                        District, Shanghai </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class='col-md-4'>
+                                                            <div class="card"
+                                                                style="background-color:#215070; color:#3498db"><span
+                                                                    class='icon'><i class='fas fa-map'
+                                                                        style='color: #fff'></i></span>
+                                                                <div class="content-wrap"><span class='item-title'
+                                                                        style='color:#a3baca;'>LOCATION</span>
+                                                                    <div class='text font1' style='color:#fff'>
+                                                                        Guangdong:
+                                                                        No. 8 Guangchang Road, Mingzhu Industrial Park,
+                                                                        Conghua Economic Development Zone, Guangzhou
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class='col-md-4'>
+                                                            <div class="card"
+                                                                style="background-color:#215070; color:#3498db"><span
+                                                                    class='icon'><i class='fas fa-map'
+                                                                        style='color: #fff'></i></span>
+                                                                <div class="content-wrap"><span class='item-title'
+                                                                        style='color:#a3baca;'>LOCATION</span>
+                                                                    <div class='text font1' style='color:#fff'>
+                                                                        Beijing:
+                                                                        Office Address: 17 floor , Block B, Jinyu
+                                                                        International, Huilongguan, Changping District,
+                                                                        Beijing.</div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class='col-md-4'>
+                                                            <div class="card"
+                                                                style="background-color:#215070; color:#3498db"><span
+                                                                    class='icon'><i class='fas fa-map'
+                                                                        style='color: #fff'></i></span>
+                                                                <div class="content-wrap"><span class='item-title'
+                                                                        style='color:#a3baca;'>LOCATION</span>
+                                                                    <div class='text font1' style='color:#fff'>
+                                                                        Xiayangao,Yanjiang Town,Linhai City, Zhejiang
+                                                                        Province, China</div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class='col-md-4'>
+                                                            <div class="card"
+                                                                style="background-color:#215070; color:#3498db"><span
+                                                                    class='icon'><i class='fas fa-map'
+                                                                        style='color: #fff'></i></span>
+                                                                <div class="content-wrap"><span class='item-title'
+                                                                        style='color:#a3baca;'>LOCATION</span>
+                                                                    <div class='text font1' style='color:#fff'>
+                                                                        Xiayangao,Yanjiang Town,Linhai City, Zhejiang
+                                                                        Province, China</div>
                                                                 </div>
                                                             </div>
                                                         </div>
